zigbee2mqtt/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: zigbee2mqtt
  namespace: smart-home
spec:
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  selector:
    k8s-app: zigbee2mqtt
