zigbee2mqtt/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: smart-home
spec:
  ingressClassName: nginx
  rules:
    - host: z2m.termite.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080
